--- a/DTFKhayerEntity/DTFKhayerEntity.csproj
+++ b/DTFKhayerEntity/DTFKhayerEntity.csproj
@@ -60,7 +60,9 @@
     <Compile Include="BaseEntity.cs" />
     <Compile Include="Corporation.cs" />
     <Compile Include="Franchise.cs" />
+    <Compile Include="Home.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Sale.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(StarcounterBin)\Starcounter.MsBuild.targets" />
