--- a/DTFKhayer/DTFKhayer.csproj
+++ b/DTFKhayer/DTFKhayer.csproj
@@ -86,6 +86,9 @@
     <Compile Include="ViewModels\SalesListPage.json.cs">
       <DependentUpon>SalesListPage.json</DependentUpon>
     </Compile>
+    <Compile Include="ViewModels\SetupPage.json.cs">
+      <DependentUpon>SetupPage.json</DependentUpon>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\DTFKhayerEntity\DTFKhayerEntity.csproj">
@@ -109,6 +112,9 @@
     <TypedJSON Include="ViewModels\SalesListPage.json">
       <Generator>MsBuild:Compile</Generator>
     </TypedJSON>
+    <TypedJSON Include="ViewModels\SetupPage.json">
+      <Generator>MsBuild:Compile</Generator>
+    </TypedJSON>
     <None Include="wwwroot\DTFKhayer\viewmodels\CorporationPage.html" />
   </ItemGroup>
   <ItemGroup>
@@ -119,6 +125,9 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="wwwroot\DTFKhayer\viewmodels\SalesListPage.html" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="wwwroot\DTFKhayer\viewmodels\SetupPage.html" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(StarcounterBin)\Starcounter.MsBuild.targets" />
